# Resume-AutoFill-Extension-beta

./: 0-1探索过程.docx  README.md  eventual-foraging-ripple.md  和豆包的对话_0324.txt
.claude/: settings.json  settings.local.json
resume-filler/: .editorconfig  .gitignore  CLAUDE.md  README.md
resume-filler/backend/: .env.example  .gitignore  README.md  TROUBLESHOOTING.md  pyproject.toml  requirements.txt  server.py  start.bat  stop.bat
resume-filler/backend/models/: __init__.py  resume.py
resume-filler/backend/routers/: __init__.py  resume.py
resume-filler/backend/services/: __init__.py  llm.py  multi_model_service.py  parser.py  vision_service.py
resume-filler/backend/utils/: __init__.py  cache.py
resume-filler/frontend/: .prettierrc  build.bat  build.sh  package-lock.json  package.json  vite.config.js
resume-filler/frontend/public/: manifest.json
resume-filler/frontend/public/background/: index.js
resume-filler/frontend/public/content/: cascading-select.js  index.js  visual-feedback.js
resume-filler/frontend/public/popup/: index.html  index.js
resume-filler/frontend/public/web/: index.html  index.js
resume-filler/frontend/src/: dummy.js
新建文件夹/: 牛客网申助手1.0.3.crx
